# AIBoMGen-cli

./: .gitignore  .golangci.yml  .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml  sbom_cyclonedx.json
.github/: dependabot.yml
.github/workflows/: build.yml  integration.yml  release.yml  tests.yml
aibomgen-frontend/: package-lock.json  package.json
aibomgen-frontend/components/: AppSidebar.tsx  Navbar.tsx
aibomgen-platform/: README.md  compose-up.sh  docker-compose.yml
aibomgen-platform/api/: developer_endpoints.py
aibomgen-platform/utils/: generate_in-toto_signed_layout.py  open-dashboards.py
aibomgen-platform/worker/: Dockerfile  Dockerfile.cpu  environment_extractor.py  tasks.py
cmd/: completeness.go  enrich.go  generate.go  merge.go  root.go  validate.go
cmd/aibomgen/: main.go
cmd/aibomgen-cli/: completeness.go  enrich.go  generate.go  merge.go  root.go  scan.go  validate.go  vulnscan.go
config/: config.yaml  defaults.yaml  enrichment.yaml
docs/: CRA-Work-Plan.md  bubbletea.md  design.md  mapping.md  metadatasources.md
docs/draft/: examples.md
docs/mapping/: config.md
internal/.dummy/: dummy_fetcher.go
internal/apperr/: apperr.go
internal/bom/: bom.go  bom_test.go
internal/builder/: bom_builder.go  bom_builder_test.go  context.go  context_test.go  dependency_builder.go  dependency_builder_test.go  logging.go  logging_test.go  meta_builder.go  meta_builder_test.go  metadata_component_builder.go  model_card_builder.go  security_builder.go  version.go  (+1 more)
tests/: conftest.py  test_cli.py  test_generator.py
(+132 files in other folders)
