[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "aibomcra"
version = "0.1.0"
description = "CRA-oriented AIBOM generator for PDE manufacturers (CLI + API)"
readme = "README.md"
authors = [
  { name = "Wiebe Vandendriessche" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []
keywords = ["AIBOM", "CycloneDX", "SPDX", "Hugging Face", "OSV", "Trivy"]

[project.urls]
Homepage = "https://https://github.com/idlab-discover/AIBoMGen/tree/aibomgen-cra/main"

[project.scripts]
aibom-cra = "aibomcra.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aibomcra"]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "coverage[toml]>=7.5"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=aibomcra --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["aibomcra"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "pass",
]
